# gr_sim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements-dev.txt
bench/: CMakeLists.txt  bench_timer.cpp  bench_timer.h  expression_benchmark.cpp  expression_benchmark.h  expression_profile.cpp  expression_profile.h  gr_bench_main.cpp  hardware_peak_probe.cpp  hardware_peak_probe.h  papi_wrapper.cpp  papi_wrapper.h  platform.hpp
docs/: SCHWARZSCHILD_METRIC.md
exercises/: 25.cpp  CMakeLists.txt
src/: main.cpp  simulation.cpp  simulation.h
src/console/: console_ui.cpp  console_ui.h  logger.cpp  logger.h
src/constants/: constants.h  units.h
src/engine/: amr_grid.cpp  amr_grid.h  atmosphere.h  body.cpp  body.h  collision.h  engine_interface.h  engine_registry.cpp  engine_registry.h  erosion.h  field.cpp  field.h  fluid.h  gw_emission.h  metric.h  schwarzschild.cpp  schwarzschild.h  worldline.h
src/system/: accurator.h  active_compute.h  allocator.cpp  allocator.h  compute_budget.h  hardware_profile.h  observer.cpp  observer.h  observer_manager.h  roofline.cpp  roofline.h  safe_loader.cpp  safe_loader.h  scheduler.cpp  scheduler.h  spawn_queue.cpp  spawn_queue.h  time_system.cpp  time_system.h  validator.cpp  validator.h
tools/math_renderer/: __init__.py  config.yaml  cpp_extractor.py  main.py  markdown_renderer.py  math_annotator.py
tools/mway_map.py/: milky_way_minmap_binary.py  requirements.txt  sdss_fetch_to_zst.py
tools/tests/: accurator.py
